--- a/pages/index.html
+++ b/pages/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <script src="../scripts/apiCalls.js"></script>
-  <script src="../scripts/loginpage.js" defer></script>
-  <link rel="stylesheet" href="../styles/loginpage.css">
+  <script src="../scripts/indexpage.js" defer></script>
+  <link rel="stylesheet" href="../styles/indexpage.css">
   <title>Авторизация</title>
 </head>
 
